<resources>
    <string name="app_name">MyPercent</string>
    <string name="action_settings">About</string>
    <string name="Cal">CALCULATE</string>
    <string name="Num">Enter Number</string>
    <string name="of">Of</string>
    <string name="per">%</string>
    <string name="perce_hint">Enter Percentage</string>
    <string name="what">What Is</string>
    <string name="zero">0</string>
    <string name="image">image</string>
</resources>
