<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vyvital.MyPercent.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="vyvital.MyPercent.MainActivity"
        tools:showIn="@layout/activity_main">

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="69dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="64dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="105dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/what"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:context="vyvital.MyPercent.MainActivity"
            tools:showIn="@layout/activity_main">

            <EditText
                android:id="@+id/percentageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="21dp"
                android:ems="10"
                android:hint="@string/perce_hint"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="34dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/of"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/numberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:ems="10"
            android:hint="@string/Num"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button"
            android:layout_width="222dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/Cal" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>